[gd_scene load_steps=4 format=3 uid="uid://ct5fxj7g8bj7o"]

[ext_resource type="Script" path="res://scripts/BattleManager.gd" id="1_battle_manager"]
[ext_resource type="Texture2D" path="res://assets/characters/player.png" id="2_player_sprites"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.52, 0.81, 0.98, 1)

[node name="Battle" type="Node2D"]
script = ExtResource("1_battle_manager")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="ColorRect" parent="Background"]
offset_right = 1280.0
offset_bottom = 480.0
color = Color(0.52, 0.81, 0.98, 1)

[node name="Ground" type="ColorRect" parent="Background"]
offset_top = 480.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.2, 0.7, 0.2, 1)

[node name="Sprites" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusBars" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FoeStatusBar" type="Panel" parent="UI/StatusBars"]
layout_mode = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 450.0
offset_bottom = 150.0
modulate = Color(1, 1, 1, 0.9)

[node name="FoeNameLevel" type="Label" parent="UI/StatusBars/FoeStatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.4
offset_left = 15.0
offset_top = 10.0
offset_right = -120.0
offset_bottom = -10.0
text = "BOBO    Lv11"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="FoeStatusEffects" type="HBoxContainer" parent="UI/StatusBars/FoeStatusBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.4
offset_left = -110.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
theme_override_constants/separation = 3

[node name="FoeHPBar" type="ProgressBar" parent="UI/StatusBars/FoeStatusBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = 50.0
offset_top = 5.0
offset_right = -15.0
offset_bottom = -5.0
max_value = 100.0
value = 84.0
show_percentage = false

[node name="FoeHPLabel" type="Label" parent="UI/StatusBars/FoeStatusBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.8
offset_left = 15.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = -5.0
text = "HP"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1

[node name="AllyStatusBar" type="Panel" parent="UI/StatusBars"]
layout_mode = 0
offset_left = 830.0
offset_top = 300.0
offset_right = 1230.0
offset_bottom = 450.0
modulate = Color(1, 1, 1, 0.9)

[node name="AllyNameLevel" type="Label" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.3
offset_left = 15.0
offset_top = 10.0
offset_right = -120.0
offset_bottom = -10.0
text = "FRIEDER    Lv9"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="AllyStatusEffects" type="HBoxContainer" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.3
offset_left = -110.0
offset_top = 10.0
offset_right = -15.0
offset_bottom = -10.0
theme_override_constants/separation = 3

[node name="AllyHPBar" type="ProgressBar" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.65
offset_left = 50.0
offset_top = 5.0
offset_right = -15.0
offset_bottom = -5.0
max_value = 100.0
value = 95.0
show_percentage = false

[node name="AllyHPLabel" type="Label" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.35
anchor_bottom = 0.65
offset_left = 15.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = -5.0
text = "HP"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1

[node name="AllyHPText" type="Label" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.80
offset_left = -120.0
offset_top = 2.0
offset_right = -15.0
offset_bottom = -2.0
text = "95 / 100"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 2
vertical_alignment = 1

[node name="AllyXPBar" type="ProgressBar" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 0.80
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 5.0
offset_right = -15.0
offset_bottom = -5.0
max_value = 100.0
value = 65.0
show_percentage = false
modulate = Color(0.4, 0.8, 1, 1)

[node name="AllyXPLabel" type="Label" parent="UI/StatusBars/AllyStatusBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.80
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = -5.0
text = "XP"
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1

[node name="BattleText" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 50.0
offset_top = 500.0
offset_right = 800.0
offset_bottom = 620.0
modulate = Color(1, 1, 1, 0.95)

[node name="TextLabel" type="Label" parent="UI/BattleText"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
text = "Anführer BENEDIKT fordert dich heraus!"
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 2
vertical_alignment = 1

[node name="CommandGrid" type="GridContainer" parent="UI"]
layout_mode = 0
offset_left = 850.0
offset_top = 500.0
offset_right = 1230.0
offset_bottom = 620.0
columns = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="FightButton" type="Button" parent="UI/CommandGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "ANGRIFF"
theme_override_font_sizes/font_size = 16

[node name="SwitchButton" type="Button" parent="UI/CommandGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "MENSCHEN"
theme_override_font_sizes/font_size = 16

[node name="ItemsButton" type="Button" parent="UI/CommandGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "TASCHE"
theme_override_font_sizes/font_size = 16

[node name="RunButton" type="Button" parent="UI/CommandGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "FLUCHT"
theme_override_font_sizes/font_size = 16

[node name="AttackMenu" type="Panel" parent="UI"]
layout_mode = 0
offset_left = 100.0
offset_top = 520.0
offset_right = 1180.0
offset_bottom = 680.0
visible = false
modulate = Color(1, 1, 1, 0.95)

[node name="AttackGrid" type="GridContainer" parent="UI/AttackMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
columns = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Attack1" type="Panel" parent="UI/AttackMenu/AttackGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HBox" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack1/VBox"]
layout_mode = 2

[node name="AttackName" type="Label" parent="UI/AttackMenu/AttackGrid/Attack1/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bier-Sturz"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TypeBadge" type="Label" parent="UI/AttackMenu/AttackGrid/Attack1/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "ALKOHOL"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="AttackInfo" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack1/VBox"]
layout_mode = 2

[node name="AttackAP" type="Label" parent="UI/AttackMenu/AttackGrid/Attack1/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP: 15/15"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="PowerIndicator" type="Label" parent="UI/AttackMenu/AttackGrid/Attack1/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 0
text = "★★★"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="Attack2" type="Panel" parent="UI/AttackMenu/AttackGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HBox" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack2/VBox"]
layout_mode = 2

[node name="AttackName" type="Label" parent="UI/AttackMenu/AttackGrid/Attack2/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lallender Monolog"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TypeBadge" type="Label" parent="UI/AttackMenu/AttackGrid/Attack2/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "ALKOHOL"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="AttackInfo" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack2/VBox"]
layout_mode = 2

[node name="AttackAP" type="Label" parent="UI/AttackMenu/AttackGrid/Attack2/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP: 10/10"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="PowerIndicator" type="Label" parent="UI/AttackMenu/AttackGrid/Attack2/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 0
text = "★"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="Attack3" type="Panel" parent="UI/AttackMenu/AttackGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HBox" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack3/VBox"]
layout_mode = 2

[node name="AttackName" type="Label" parent="UI/AttackMenu/AttackGrid/Attack3/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Konter-Schlag"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TypeBadge" type="Label" parent="UI/AttackMenu/AttackGrid/Attack3/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "NORMAL"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="AttackInfo" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack3/VBox"]
layout_mode = 2

[node name="AttackAP" type="Label" parent="UI/AttackMenu/AttackGrid/Attack3/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP: 20/20"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="PowerIndicator" type="Label" parent="UI/AttackMenu/AttackGrid/Attack3/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 0
text = "★★"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.8, 0, 1)

[node name="Attack4" type="Panel" parent="UI/AttackMenu/AttackGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HBox" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack4/VBox"]
layout_mode = 2

[node name="AttackName" type="Label" parent="UI/AttackMenu/AttackGrid/Attack4/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Prost!"
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="TypeBadge" type="Label" parent="UI/AttackMenu/AttackGrid/Attack4/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 0
text = "ALKOHOL"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="AttackInfo" type="HBoxContainer" parent="UI/AttackMenu/AttackGrid/Attack4/VBox"]
layout_mode = 2

[node name="AttackAP" type="Label" parent="UI/AttackMenu/AttackGrid/Attack4/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP: 5/5"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="PowerIndicator" type="Label" parent="UI/AttackMenu/AttackGrid/Attack4/VBox/AttackInfo"]
layout_mode = 2
size_flags_horizontal = 0
text = "★"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 0.8, 0, 1)